# mbdp-madp

./: AUTHORS  ChangeLog  ExtendingMADP.md  MADPPort.md  Makefile.am  Makefile.in  NEWS  ProjectHome.md  ProjectPresentation.md  README  aclocal.m4  config.h.in  configure  configure.ac  ltmain.sh
DebugAIBot/: DebugAIBot.vcproj
LINUX/src/examples/: MBDP.cpp  Makefile.am
LINUX/src/planning/: MBDPPlanner.cpp  MBDPPlanner.h  Makefile.am
MADP_dll/: MADP_dll.ncb  MADP_dll.sln  MADP_dll.vcproj
MADP_dll/libArgp/: libArgp.vcproj
MBDPAIBot/: MBDPAIBot.vcproj
MBDPAIBot2/: MBDPAIBot2.vcproj
Tests/BFS/: BFS.vcproj
Tests/DICEPS/: DICEPS.vcproj
Tests/GMAA/: GMAA.vcproj
Tests/JESP/: JESP.vcproj
Tests/Perseus/: Perseus.vcproj
Tests/decTigerJESP/: decTigerJESP.vcproj
TrivialAIBot/: TrivialAIBot.vcproj
doc/: DOC-References.h  MainPage.h  doxygen.conf
libMADPBase/: libMADPBase.vcproj
libMADPParser/: libMADPParser.vcproj
libMADPSupport/: libMADPSupport.vcproj
libMADPplanning/: libMADPplanning.vcproj
problems/: GridSmall.dpomdp  README  broadcastChannel.dpomdp  dectiger.dpomdp  dectiger_skewed.dpomdp  example.dpomdp  recycling.dpomdp  starcraft-dragoons.dpomdp  starcraft.dpomdp
src/: Dll.cpp  MBDPAIModule.cpp  MBDPAIModule.h  Makefile.am  Makefile.custom  Makefile.in  TrivialAIBot.cpp  TrivialAIBot.h  aibotdebug.cpp  times.cpp
src/BWAPI/: BWTA.h
src/BWAPI/BWTA/: Polygon.h
src/argp-standalone-1.3/: argp-fmtstream.h  argp-help.c  argp-test.c  argp.h
src/base/: Action.h  ActionDiscrete.h  Agent.h  DecPOMDP.cpp  DecPOMDP.h  DecPOMDPDiscrete.cpp  DecPOMDPDiscrete.h  DecPOMDPDiscreteInterface.h  DecPOMDPInterface.h  DiscreteEntity.h  E.h  EInvalidIndex.h  ENotCached.h  EOverflow.h  EParse.h  Globals.cpp  Globals.h  IndexTools.cpp  IndexTools.h  JointAction.h  JointActionDiscrete.cpp  JointActionDiscrete.h  JointObservation.h  JointObservationDiscrete.cpp  JointObservationDiscrete.h  MADPComponentDiscreteActions.cpp  MADPComponentDiscreteActions.h  MADPComponentDiscreteObservations.cpp  MADPComponentDiscreteObservations.h  MADPComponentDiscreteStates.cpp  MADPComponentDiscreteStates.h  Makefile.am  Makefile.in  MultiAgentDecisionProcess.cpp  MultiAgentDecisionProcess.h  MultiAgentDecisionProcessDiscrete.cpp  MultiAgentDecisionProcessDiscrete.h  MultiAgentDecisionProcessDiscreteInterface.h  MultiAgentDecisionProcessInterface.h  NamedDescribedEntity.cpp  (+56 more)
src/boost/: README
src/boost/boost/mpl/: apply.hpp  apply_wrap.hpp  bind.hpp  unpack_args.hpp
src/boost/boost/mpl/aux_/: advance_backward.hpp  advance_forward.hpp  full_lambda.hpp  numeric_op.hpp
src/boost/boost/spirit/phoenix/: operators.hpp
src/examples/: BFS.cpp  DICEPS.cpp  GMAA.cpp  JESP.cpp  Makefile.am  Makefile.in  Perseus.cpp  decTigerJESP.cpp
src/include/: _globaldefines.cpp  versions.h
src/include/sys/: time.h  times.h
src/parser/: CommentOrBlankParser.h  MADPParser.cpp  MADPParser.h  Makefile.am  Makefile.in  ParserDecPOMDPDiscrete.cpp  ParserDecPOMDPDiscrete.h  ParserInterface.h  ParserTOICompactRewardDecPOMDPDiscrete.cpp  ParserTOICompactRewardDecPOMDPDiscrete.h  ParserTOIDecMDPDiscrete.cpp  ParserTOIDecMDPDiscrete.h  ParserTOIDecPOMDPDiscrete.cpp  ParserTOIDecPOMDPDiscrete.h  ParserTOIFactoredRewardDecPOMDPDiscrete.cpp  ParserTOIFactoredRewardDecPOMDPDiscrete.h  dpomdp.spirit
src/planning/: AgentBG.cpp  AgentBG.h  AgentDecPOMDPDiscrete.h  AgentDelayedSharedObservations.h  AgentFullyObservable.h  AgentLocalObservations.h  AgentPOMDP.cpp  AgentPOMDP.h  AgentQMDP.cpp  AgentQMDP.h  AgentRandom.cpp  AgentRandom.h  AgentSharedObservations.h  AlphaVector.cpp  AlphaVector.h  AlphaVectorBG.cpp  AlphaVectorBG.h  AlphaVectorPOMDP.cpp  AlphaVectorPOMDP.h  AlphaVectorPlanning.cpp  AlphaVectorPlanning.h  BGBackupType.h  BGIPSolution.cpp  BGIPSolution.h  BGIP_SolverAlternatingMaximization.h  BGIP_SolverBruteForceSearch.h  BGIP_SolverCreatorInterface.h  BGIP_SolverCreator_AM.h  BGIP_SolverCreator_BFS.h  BGIP_SolverRandom.cpp  BGIP_SolverRandom.h  BGIP_SolverType.cpp  BGIP_SolverType.h  BGforStageCreation.cpp  BGforStageCreation.h  BayesianGame.cpp  BayesianGame.h  BayesianGameBase.cpp  BayesianGameBase.h  BayesianGameForDecPOMDPStage.cpp  (+112 more)
src/support/: ActionHistory.cpp  ActionHistory.h  ActionHistoryTree.h  ActionObservationHistory.cpp  ActionObservationHistory.h  ActionObservationHistoryTree.cpp  ActionObservationHistoryTree.h  Belief.cpp  Belief.h  BeliefInterface.h  BeliefIterator.h  BeliefIteratorGeneric.h  BeliefIteratorInterface.h  BeliefIteratorSparse.h  BeliefSparse.cpp  BeliefSparse.h  FixedCapacityPriorityQueue.cpp  FixedCapacityPriorityQueue.h  History.h  IndividualBeliefJESP.cpp  IndividualBeliefJESP.h  IndividualHistory.h  Interface_ProblemToPolicyDiscrete.h  Interface_ProblemToPolicyDiscretePure.h  JPolComponent_VectorImplementation.cpp  JPolComponent_VectorImplementation.h  JointActionHistory.cpp  JointActionHistory.h  JointActionHistoryTree.h  JointActionObservationHistory.cpp  JointActionObservationHistory.h  JointActionObservationHistoryTree.cpp  JointActionObservationHistoryTree.h  JointBelief.cpp  JointBelief.h  JointBeliefInterface.h  JointBeliefSparse.cpp  JointBeliefSparse.h  JointHistory.h  JointObservationHistory.cpp  (+55 more)
src/utils/: Makefile.am  Makefile.in  analyzeRewardResults.cpp  evaluateJointPolicyPureVector.cpp  evaluatePerseusPolicy.cpp  evaluateRandomPolicy.cpp  getAvgReward.cpp  printJointPolicyPureVector.cpp  printProblem.cpp
