# $Id: Makefile.am 3635 2009-08-27 13:33:33Z mtjspaan $

include $(top_srcdir)/src/Makefile.custom
include $(top_srcdir)/config/Make-rules

# Which programs to build. Only PROGRAMS_NORMAL will be installed.
PROGRAMS_NORMAL = JESP BFS decTigerJESP GMAA DICEPS Perseus

##############
# Includedirs, libdirs, libs and cflags for all programs 
INCLUDES		= -I.. $(MADP_INCLUDES)
AM_LDFLAGS		= 
LDADD			= 
AM_CPPFLAGS		= -Wall -pipe $(MARCH_FLAGS)

noinst_PROGRAMS = 
bin_PROGRAMS = $(PROGRAMS_NORMAL)

# Build JESP
JESP_SOURCES = JESP.cpp
JESP_LDADD = $(MADPLIBS_NORMAL) $(MADP_LD)
JESP_LDFLAGS = $(AM_LDFLAGS) 
JESP_DEPENDENCIES = $(MADPLIBS_NORMAL)
JESP_CPPFLAGS= $(AM_CPPFLAGS) $(CPP_OPTIMIZATION_FLAGS)
JESP_CXXFLAGS=
JESP_CFLAGS=

# Build BFS
BFS_SOURCES = BFS.cpp
BFS_LDADD = $(MADPLIBS_NORMAL) $(MADP_LD)
BFS_LDFLAGS = $(AM_LDFLAGS) 
BFS_DEPENDENCIES = $(MADPLIBS_NORMAL)
BFS_CPPFLAGS= $(AM_CPPFLAGS) $(CPP_OPTIMIZATION_FLAGS)
BFS_CXXFLAGS=
BFS_CFLAGS=

# Build decTigerJESP
decTigerJESP_SOURCES = decTigerJESP.cpp
decTigerJESP_LDADD = $(MADPLIBS_NORMAL) $(MADP_LD)
decTigerJESP_LDFLAGS = $(AM_LDFLAGS) 
decTigerJESP_DEPENDENCIES = $(MADPLIBS_NORMAL)
decTigerJESP_CPPFLAGS= $(AM_CPPFLAGS) $(CPP_OPTIMIZATION_FLAGS)
decTigerJESP_CXXFLAGS=
decTigerJESP_CFLAGS=

# Build GMAA
GMAA_SOURCES = GMAA.cpp
GMAA_LDADD = $(MADPLIBS_NORMAL) $(MADP_LD)
GMAA_LDFLAGS = $(AM_LDFLAGS) 
GMAA_DEPENDENCIES = $(MADPLIBS_NORMAL)
GMAA_CPPFLAGS= $(AM_CPPFLAGS) $(CPP_OPTIMIZATION_FLAGS)
GMAA_CXXFLAGS=
GMAA_CFLAGS=

# Build DICEPS
DICEPS_SOURCES = DICEPS.cpp
DICEPS_LDADD = $(MADPLIBS_NORMAL) $(MADP_LD)
DICEPS_LDFLAGS = $(AM_LDFLAGS) 
DICEPS_DEPENDENCIES = $(MADPLIBS_NORMAL)
DICEPS_CPPFLAGS= $(AM_CPPFLAGS) $(CPP_OPTIMIZATION_FLAGS)
DICEPS_CXXFLAGS=
DICEPS_CFLAGS=

# Build Perseus
Perseus_SOURCES = Perseus.cpp
Perseus_LDADD = $(MADPLIBS_NORMAL) $(MADP_LD)
Perseus_LDFLAGS = $(AM_LDFLAGS) 
Perseus_DEPENDENCIES = $(MADPLIBS_NORMAL)
Perseus_CPPFLAGS= $(AM_CPPFLAGS) $(CPP_OPTIMIZATION_FLAGS)
Perseus_CXXFLAGS=
Perseus_CFLAGS=
